--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "torrent-mount"]
 	path = torrent-mount
-	url = git@github.com:luzithan/torrent-mount.git
+	url = git@github.com-luzithan:luzithan/torrent-mount.git
