--- a/docker-compose.template.yml
+++ b/docker-compose.template.yml
@@ -2,14 +2,14 @@ version: '2.1'
 services:
   plex:
     container_name: plex
-    image: plexinc/pms-docker
+    image: plexinc/pms-docker:latest
     restart: unless-stopped
     ports:
       - "32400:32400/tcp"
       - "3005:3005/tcp"
       - "8324:8324/tcp"
       - "32469:32469/tcp"
-      - "1900:1900/udp"
+      #- "1900:1900/udp"
       - "32410:32410/udp"
       - "32412:32412/udp"
       - "32413:32413/udp"
@@ -25,6 +25,14 @@ services:
       - /share/Download:/data
       - /share/Movies:/movies
       - /share/TVShows:/tv
+  plex_setup:
+    build: plex-setup
+    environment:
+      - PLEX_USERNAME = ${PLEX_USERNAME}
+      - PLEX_PASSWORD = ${PLEX_PASSWORD}
+    depends_on:
+      plex:
+        condition: service_healthy
   transmission:
     container_name: transmission
     image: dperson/transmission
