--- a/docker-compose.template.yml
+++ b/docker-compose.template.yml
@@ -23,9 +23,10 @@ services:
       - /share/Multimedia/Configurations/Plex:/config
       - /tmp:/transcode
       - /share/Download:/data
-      - /share/Movies:/movies
-      - /share/TVShows:/tv
-  plex_setup:
+    volumes_from:
+    - torrent-mount-movies:ro
+    - torrent-mount-tv:ro
+  plex-setup:
     build: plex-setup
     environment:
       - PLEX_SERVER_HOSTNAME=http://plex
@@ -54,8 +55,25 @@ services:
     ports:
       - "9091:9091"
       - "51412:51413"
-  torrent-live:
-    build: torrent-live
+  torrent-mount-tv:
+    build: torrent-mount
     volumes:
       - /share/TVShows:/tv
-      - /share/Movier:/movies
+    ports:
+      - "8082:8082"
+  torrent-mount-movies:
+    build: torrent-mount
+    volumes:
+      - /share/Movies:/movies
+    ports:
+      - "8083:8083"
+  parser:
+    build: parser
+    hostname: parser
+    environment:
+      - PARSER_PORT=8081
+    ports:
+      - "8081:8081"
+
+volumes:
+  data:
