--- a/docker-compose.template.yml
+++ b/docker-compose.template.yml
@@ -2,7 +2,7 @@ version: '2.1'
 services:
   plex:
     container_name: plex
-    image: plexinc/pms-docker
+    image: plexinc/pms-docker:latest
     restart: unless-stopped
     ports:
       - "32400:32400/tcp"
@@ -25,6 +25,12 @@ services:
       - /share/Download:/data
       - /share/Movies:/movies
       - /share/TVShows:/tv
+  dl-serve:
+    image: kyma/docker-nginx
+    volumes:
+      - /share:/var/www
+    ports:
+      - "8080:80"
   transmission:
     container_name: transmission
     image: dperson/transmission
