--- a/docker-compose.template.yml
+++ b/docker-compose.template.yml
@@ -1,14 +1,18 @@
-version: '2.1'
+version: '3'
 services:
   plex:
     container_name: plex
     image: plexinc/pms-docker:latest
     restart: unless-stopped
+    network_mode: bridge
+    expose:
+      - 32400
     ports:
       - "32400:32400/tcp"
       - "3005:3005/tcp"
       - "8324:8324/tcp"
       - "32469:32469/tcp"
+#      - "80:80/tcp"
       #- "1900:1900/udp"
       - "32410:32410/udp"
       - "32412:32412/udp"
@@ -19,54 +23,65 @@ services:
       - TZ=${TZ}
       - PLEX_CLAIM=${PLEX_CLAIM}
       - ADVERTISE_IP=${ADVERTISE_IP}
+      - VIRTUAL_HOST=plex.${DOMAIN}
+      - VIRTUAL_PORT=32400
     volumes:
       - /share/Multimedia/Configurations/Plex:/config
       - /tmp:/transcode
       - /share/Download:/data
-    volumes_from:
-    - torrent-mount-movies:ro
-    - torrent-mount-tv:ro
-  plex-setup:
-    build: plex-setup
-    environment:
-      - PLEX_SERVER_HOSTNAME=http://plex
-      - PLEX_AUTH=${PLEX_AUTH}
-    depends_on:
-      plex:
-        condition: service_healthy
-  transmission:
-    container_name: transmission
-    image: dperson/transmission
     volumes:
-      - /share/Multimedia/Configurations/Transmission:/var/lib/transmission-daemon/info
-      - /share/Download:/var/lib/transmission-daemon/downloads
-      - /share/Movies:/movies
-      - /share/TVShows:/tv
-      - /share/Watch:/watch
+    - dl-data-movies:/movies
+    - dl-data-tv:/tv
+ # plex-setup:
+  #  build: plex-setup
+   # environment:
+    #  - PLEX_SERVER_HOSTNAME=http://plex
+     # - PLEX_AUTH=${PLEX_AUTH}
+    #depends_on:
+     # plex:
+      #  condition: service_healthy
+  transmission-movies:
+    image: dperson/transmission
+    network_mode: bridge
+    expose:
+      - 9091
+    volumes:
+      - dl-data-movies:/downloads
     environment:
-      - TR_WATCH_DIR_ENABLED=true
-      - TR_WATCH_DIR=/watch
       - TR_RPC_AUTHENTICATION_REQUIRED=true
+      - TR_DOWNLOAD_DIR=/downloads
       - TR_RPC_ENABLED=true
+      - TR_PEER_PORT=51411
       - TRUSER=${TRANSMISSION_USERNAME}
       - TRPASSWD=${TRANSMISSION_PASSWORD}
       - USERID=0
       - GROUPID=0
+      - VIRTUAL_HOST=transmission-movies.${DOMAIN}
+      - VIRTUAL_PORT=9091
     ports:
       - "9091:9091"
-      - "51412:51413"
-  torrent-mount-tv:
-    build: torrent-mount
+      - "51411:51411"
+  transmission-tv:
+    image: dperson/transmission
+    network_mode: bridge
+    expose:
+      - 9092
     volumes:
-      - /share/TVShows:/tv
+      - dl-data-tv:/downloads
+    environment:
+      - TR_RPC_AUTHENTICATION_REQUIRED=true
+      - TR_DOWNLOAD_DIR=/downloads
+      - TR_RPC_ENABLED=true
+      - TR_PEER_PORT=51412
+      - TRUSER=${TRANSMISSION_USERNAME}
+      - TRPASSWD=${TRANSMISSION_PASSWORD}
+      - USERID=0
+      - GROUPID=0
+      - VIRTUAL_HOST=transmission-tv.${DOMAIN}
+      - VIRTUAL_PORT=9092
     ports:
-      - "8082:8082"
-  torrent-mount-movies:
-    build: torrent-mount
-    volumes:
-      - /share/Movies:/movies
-    ports:
-      - "8083:8083"
+      - "9092:9091"
+      - "51412:51412"
   parser:
     build: parser
     hostname: parser
@@ -75,5 +90,58 @@ services:
     ports:
       - "8081:8081"
 
+
+  nginx-web:
+    image: nginx
+    labels:
+        com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy: "true"
+    container_name: nginx-web
+    restart: always
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ${NGINX_FILES_PATH}/conf.d:/etc/nginx/conf.d
+      - ${NGINX_FILES_PATH}/vhost.d:/etc/nginx/vhost.d
+      - ${NGINX_FILES_PATH}/html:/usr/share/nginx/html
+      - ${NGINX_FILES_PATH}/certs:/etc/nginx/certs:ro
+      - ${NGINX_FILES_PATH}/htpasswd:/etc/nginx/htpasswd:ro
+
+  nginx-gen:
+    image: jwilder/docker-gen
+    command: -notify-sighup nginx-web -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+    container_name: nginx-gen
+    restart: always
+    volumes:
+      - ${NGINX_FILES_PATH}/conf.d:/etc/nginx/conf.d
+      - ${NGINX_FILES_PATH}/vhost.d:/etc/nginx/vhost.d
+      - ${NGINX_FILES_PATH}/html:/usr/share/nginx/html
+      - ${NGINX_FILES_PATH}/certs:/etc/nginx/certs:ro
+      - ${NGINX_FILES_PATH}/htpasswd:/etc/nginx/htpasswd:ro
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+      - ./nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
+
+  nginx-letsencrypt:
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    container_name: nginx-letsencrypt
+    restart: always
+    volumes:
+      - ${NGINX_FILES_PATH}/conf.d:/etc/nginx/conf.d
+      - ${NGINX_FILES_PATH}/vhost.d:/etc/nginx/vhost.d
+      - ${NGINX_FILES_PATH}/html:/usr/share/nginx/html
+      - ${NGINX_FILES_PATH}/certs:/etc/nginx/certs:rw
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    environment:
+      NGINX_DOCKER_GEN_CONTAINER: nginx-gen
+      NGINX_PROXY_CONTAINER: nginx-web
+
+
 volumes:
   data:
+  dl-data-tv:
+  dl-data-movies:
+
+networks:
+  proxy:
+    external:
+      name: nginx-proxy
