--- a/docker-compose.template.yml
+++ b/docker-compose.template.yml
@@ -4,9 +4,8 @@ services:
     container_name: plex
     image: plexinc/pms-docker:latest
     restart: unless-stopped
-    network_mode: bridge
     expose:
-      - 32400
+      - "32400"
     ports:
       - "32400:32400/tcp"
       - "3005:3005/tcp"
@@ -30,8 +29,10 @@ services:
       - /tmp:/transcode
       - /share/Download:/data
     volumes:
-    - dl-data-movies:/movies
-    - dl-data-tv:/tv
+      - dl-data-movies:/movies
+      - dl-data-tv:/tv
+    networks:
+      - proxy
  # plex-setup:
   #  build: plex-setup
    # environment:
@@ -42,7 +43,6 @@ services:
       #  condition: service_healthy
   transmission-movies:
     image: dperson/transmission
-    network_mode: bridge
     expose:
       - 9091
     volumes:
@@ -61,9 +61,12 @@ services:
     ports:
       - "9091:9091"
       - "51411:51411"
+    expose:
+      - "9091"
+    networks:
+      - proxy
   transmission-tv:
     image: dperson/transmission
-    network_mode: bridge
     expose:
       - 9092
     volumes:
@@ -82,6 +85,10 @@ services:
     ports:
       - "9092:9091"
       - "51412:51412"
+    expose:
+      - "9092"
+    networks:
+      - proxy
   parser:
     build: parser
     hostname: parser
@@ -89,57 +96,32 @@ services:
       - PARSER_PORT=8081
     ports:
       - "8081:8081"
-
-
-  nginx-web:
-    image: nginx
-    labels:
-        com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy: "true"
-    container_name: nginx-web
-    restart: always
+    expose:
+      - "8081"
+    networks:
+      - proxy
+  dl-serve:
+    image: kyma/docker-nginx
+    volumes:
+      - dl-data-tv:/var/www/tv
+      - dl-data-movies:/var/www/movies
     ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ${NGINX_FILES_PATH}/conf.d:/etc/nginx/conf.d
-      - ${NGINX_FILES_PATH}/vhost.d:/etc/nginx/vhost.d
-      - ${NGINX_FILES_PATH}/html:/usr/share/nginx/html
-      - ${NGINX_FILES_PATH}/certs:/etc/nginx/certs:ro
-      - ${NGINX_FILES_PATH}/htpasswd:/etc/nginx/htpasswd:ro
-
-  nginx-gen:
-    image: jwilder/docker-gen
-    command: -notify-sighup nginx-web -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
-    container_name: nginx-gen
-    restart: always
-    volumes:
-      - ${NGINX_FILES_PATH}/conf.d:/etc/nginx/conf.d
-      - ${NGINX_FILES_PATH}/vhost.d:/etc/nginx/vhost.d
-      - ${NGINX_FILES_PATH}/html:/usr/share/nginx/html
-      - ${NGINX_FILES_PATH}/certs:/etc/nginx/certs:ro
-      - ${NGINX_FILES_PATH}/htpasswd:/etc/nginx/htpasswd:ro
-      - /var/run/docker.sock:/tmp/docker.sock:ro
-      - ./nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
-
-  nginx-letsencrypt:
-    image: jrcs/letsencrypt-nginx-proxy-companion
-    container_name: nginx-letsencrypt
-    restart: always
-    volumes:
-      - ${NGINX_FILES_PATH}/conf.d:/etc/nginx/conf.d
-      - ${NGINX_FILES_PATH}/vhost.d:/etc/nginx/vhost.d
-      - ${NGINX_FILES_PATH}/html:/usr/share/nginx/html
-      - ${NGINX_FILES_PATH}/certs:/etc/nginx/certs:rw
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-    environment:
-      NGINX_DOCKER_GEN_CONTAINER: nginx-gen
-      NGINX_PROXY_CONTAINER: nginx-web
+      - "8080:80"
 
 
 volumes:
-  data:
-  dl-data-tv:
   dl-data-movies:
+    driver: local
+    driver_opts:
+      type: none
+      device: /share/Movies
+      o: bind
+  dl-data-tv:
+    driver: local
+    driver_opts:
+      type: none
+      device: /share/TV
+      o: bind
 
 networks:
   proxy:
