--- a/parser/Dockerfile
+++ b/parser/Dockerfile
@@ -2,5 +2,5 @@ FROM python:3.5
 
 COPY . /app
 WORKDIR /app
-RUN pip install requirements.txt
+RUN pip install -r requirements.txt
 CMD ["python","app.py"]
