--- a/docker-compose.template.yml
+++ b/docker-compose.template.yml
@@ -139,7 +139,7 @@ services:
       - /share/Multimedia/Configurations/rc-mount:/config
     environment:
       - RCLONE_REMOTE_MOUNT=remote:${B2_BUCKET}
-      - RCLONE_MOUNT_OPTIONS=--stats 1s --buffer-size 1G --timeout 5s --contimeout 5s -v
+      - RCLONE_MOUNT_OPTIONS=--stats 1s --buffer-size 1G --timeout 5s --contimeout 5s --cache-total-chunk-size 2G
       - RCLONE_CONFIG_REMOTE_TYPE=b2
       - RCLONE_CONFIG_REMOTE_ACCOUNT=${B2_ACCOUNT}
       - RCLONE_CONFIG_REMOTE_KEY=${B2_KEY}
