--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,18 @@ services:
     depends_on:
       - build-plex
       - rc-mount
+  tribler:
+    build: tribler
+    expose:
+      - 8085
+    volumes:
+      - /share/Downloads:/home/tribler/TriblerDownloads
+    environment:
+      - CORE_PROCESS=1
+      - CORE_API_PORT=8085
+      - CORE_BASE_PATH=/home/tribler/tribler
+    ports:
+      - "8085:8085"
   transmission-movies:
     image: dperson/transmission
     expose:
