--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,15 @@ services:
 #   ports:
 #     - "8085:8085"
 #   network_mode: "host"
+
+  cloud-torrent:
+    image: jpillora/cloud-torrent
+    expose:
+      - "3000"
+    ports:
+      - "3000:3000"
+    command: --port 3000 --auth ${USERNAME}:${PASSWORD}
+
   transmission-movies:
     image: dperson/transmission
     expose:
